# dartwork-vega

./: README.md  pyproject.toml
docs/: app.py
docs/assets/: airport.json  interactive.json  ridge.json  sankey.html
projects/multiple-time-series/: README.md  generate_data.py  index.html  index.vl.json
projects/multiple-time-series/data/: data_0.csv  data_1.csv  data_2.csv  data_3.csv  data_4.csv  data_5.csv  data_6.csv  data_7.csv  data_8.csv  data_9.csv  files.txt
projects/uoc-transfer-learning/loss_profile/: index.html  index.py  index.vl.json  vega-parameters (9).json  vega-parameters.json
projects/uoc-transfer-learning/loss_profile/data/: files.txt  transfer_learning.csv
projects/uoc-transfer-learning/loss_profile/vega/: vega-lite@5.21.0.js
src/dartwork_vega/: __init__.py
template/: README.md  index.html  index.vl.json
template/data/: my_data.csv
template/vega/: vega-embed@6.26.0.js  vega@5.30.0.js
